--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:build": "cross-conf-env docker build --tag $npm_package_config_imageName .",
     "docker:check": "cross-conf-env docker images | grep $npm_package_config_imageName | wc -l",
     "docker:run": "cross-conf-env docker run -it --volume=$(pwd):/usr/src/app --publish $npm_package_config_imagePort:4200 $npm_package_config_imageName bash",
-    "docker:test": "cross-conf-env docker run -it --volume=$(pwd):/usr/src/app --publish $npm_package_config_imagePort:4200 $npm_package_config_imageName npm run lint && npm run test",
+    "docker:test": "cross-conf-env docker run -it --volume=$(pwd):/usr/src/app --publish $npm_package_config_imagePort:4200 $npm_package_config_imageName npm run lint && npm run test && npm run e2e",
     "docker:serve": "cross-conf-env docker run -it --volume=$(pwd):/usr/src/app --publish $npm_package_config_imagePort:4200 $npm_package_config_imageName ng serve --host 0.0.0.0",
     "quickstart": "npm install && npm run docker:build && npm run docker:serve"
   },
